Minor refactor, JavaC linting